# UFGraphFR-study

./: .gitignore  README.md  data.py  embedding.py  engine.py  metrics.py  mf100k.json  mlp.py  my.py  mykan.py  mymodel.py  pyproject.toml  train.py  utils.py
.github/: copilot-instructions.md
notebooks/: 001_tutorial.ipynb  002_tutorial.ipynb  003_tutorial.ipynb  004_tutorial.ipynb  005.tutorial.ipynb  006_tutorial.ipynb
