[project]
name = "project"
requires-python = ">=3.10,<3.13"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mediapipe = "^0.10.15"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
sentence-transformers = "^3.2.1"
tensorboard = "^2.17.1"
tensorboardX = "^2.6.2"
torch = "^2.3.0"
torch-geometric = "^2.5.3"
torchaudio = "^2.3.0"
torchvision = "^0.18.0"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.6"
notebook = "^7.3.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
